fix spacing in orchard

--- a/src/App.css
+++ b/src/App.css
@@ -531,13 +531,11 @@
 
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 1rem;
+  grid-auto-rows: 1fr;
 }
 
 .grid-item {
   background-color: transparent;
-  padding: 1rem;
   font-size: 2rem;
   cursor: pointer;
   background-color: transparent;
